refactor: UI pages

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   --font-cabinet: "Cabinet Grotesk", sans-serif;
   --color-blueViolet: #8a2be2;
   --color-purpleBlue: #7b1fea;
-  --color-blue: #1556e4;
+  --color-paleBlue: #eef2ff;
   --color-fadedBlue: #dfedff;
   --color-fadedOrange: #ffeac4;
   --color-orange: #e45d15;
